ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmaceutical
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orchestrator
                port:
                  number: 8080
          - path: /system
            pathType: Prefix
            backend:
              service:
                name: orchestrator
                port:
                  number: 8080
